--- a/node/package.json
+++ b/node/package.json
@@ -10,8 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.14.1",
-    "express": "^4.13.3",
-    "method-override": "^2.3.5",
-    "path": "^0.12.7"
+    "express": "^4.13.3"
   }
 }
